--- a/mac/Workman.bundle/Contents/Resources/English.lproj/InfoPlist.strings
+++ b/mac/Workman.bundle/Contents/Resources/English.lproj/InfoPlist.strings
@@ -1,6 +1,6 @@
-"Workman" = "Workman";
-"Workman Extended" = "Workman Extended";
-"Workman-P" = "Workman-P";
-"Workman-P Extended" = "Workman-P Extended";
-"Workman-IO" = "Workman-IO";
-"Workman-Dead" = "Workman-Dead";
+"Kuality" = "Kuality";
+"Kuality Extended" = "Kuality Extended";
+"Kuality-P" = "Kuality-P";
+"Kuality-P Extended" = "Kuality-P Extended";
+"Kuality-IO" = "Kuality-IO";
+"Kuality-Dead" = "Kuality-Dead";
